--- a/sass/header.scss
+++ b/sass/header.scss
@@ -2,6 +2,7 @@
 @use 'mixins';
 
 header {
+    overflow-x: hidden;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -42,7 +43,7 @@ header {
         z-index: 1;
         @include mixins.sectionCenter();
         @include mixins.flexing(column, flex-start, flex-start);
-        padding: 100px 0 200px;
+        padding: 100px 0 220px;
         .big-intro {
             font-size: 7.5rem;
             font-weight: 700;
@@ -70,7 +71,7 @@ header {
         position: absolute;
         z-index: 0;
         right: -8%;
-        bottom: 15%;
+        bottom: 18%;
     }
 
 }
